Implement quiz UI and logic This change introduces: - A `QuizRepository` to fetch questions, with a mock implementation. - `AssessmentViewModel` to manage quiz state, including loading questions, handling answers, and navigation between questions. - Composable functions for displaying different question types (True/False, Single Choice) and handling user selections. - A main `AssessmentScreen` that observes the view model state and displays loading indicators or question content.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">AndroidAssessment</string>
+    <string name="choice_false">False</string>
+    <string name="choice_true">True</string>
+    <string name="previous">Previous</string>
+    <string name="next">Next</string>
+    <string name="cricut_quiz">Cricut Quiz</string>
 </resources>
